  * Removed circular references in parsed documentation objects.
  * Improved inheritance handling, now properties and events can be inherited same as methods.
  * Improved handling of cross-file relationships, now having two related objects in separate files is not a problem.
  * Improved ability to recognize membership of previously defined objects.
  * Added abilty to redefine parsing behavior with plugins.
  * @methodOf is a synonym for @function and @memberOf.
  * Added @default to document default values of members that are objects.
  * Added ability to parse and refer to inner functions.
  * Fixed bug that appeared when calling a method to set properties of the instance referred to by "this".
  * Added ability to more easily link to other symbol.
  * New "jsdoc" template now produces fully W3C valid XHTML.
  * Inline parameter type hint comments are now documented.
  * Fixed error: Locally scoped variables (declared with var) no longer appear as global.
  * It is now possible to run JsDoc Toolkit from any directory.
  * Added support for inline {@link ...} tags.